--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<mat-toolbar>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
+<mat-toolbar color="primary">
     <span>Budget Balance</span>
     <span class="example-spacer"></span>
-    <button *ngIf="authService.isLoggedIn" (click)="signOut()">Log Out</button>
+    <button mat-icon-button color="warn" *ngIf="authService.isLoggedIn" (click)="signOut()">
+        <mat-icon>exit_to_app</mat-icon>
+    </button>
   </mat-toolbar>
 <router-outlet></router-outlet>
