--- a/src/app/components/manage-transactions-dialog/manage-transactions-dialog.component.html
+++ b/src/app/components/manage-transactions-dialog/manage-transactions-dialog.component.html
@@ -11,17 +11,31 @@
             <input matInput formControlName="amount"/>
             <mat-error *ngIf="transactionForm.get('amount')!.hasError('required')">Amount is required</mat-error>
         </mat-form-field>
+        <mat-form-field class="example-full-width">
+            <mat-label>Date</mat-label>
+            <input matInput [matDatepicker]="picker" formControlName="startDate">
+            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-datepicker #picker></mat-datepicker>
+            <button mat-button (click)="picker.open()" style="padding: 0; margin: 0;" matSuffix>
+              <mat-icon style="padding: 0; margin: 0;">event</mat-icon>
+            </button>
+          </mat-form-field>
         <mat-form-field>
             <mat-label>Recurring</mat-label>
-            <input matInput formControlName="recurring"/>
-            <mat-error *ngIf="transactionForm.get('recurring')!.hasError('required')">Recurring selection is required</mat-error>
+            <mat-select formControlName="recurring" (selectionChange)="recurringValueChange($event)">
+                <mat-option [value]="'Yes'">Yes</mat-option>
+                <mat-option [value]="'No'">No</mat-option>
+            </mat-select>
+            <mat-error *ngIf="transactionForm.get('recurring')!.hasError('required')">
+                Recurring selection is required
+            </mat-error>
         </mat-form-field>
-        <mat-form-field>
+        <mat-form-field *ngIf="transactionForm.controls['recurring'].value === 'Yes'">
             <mat-label>Frequency Type</mat-label>
             <input matInput formControlName="frequencyType"/>
             <mat-error *ngIf="transactionForm.get('frequencyType')!.hasError('required')">Frequency Type is required</mat-error>
         </mat-form-field>
-        <mat-form-field>
+        <mat-form-field *ngIf="transactionForm.controls['recurring'].value === 'Yes'">
             <mat-label>Frequency Number</mat-label>
             <input matInput formControlName="frequencyNumber"/>
             <mat-error *ngIf="transactionForm.get('frequencyNumber')!.hasError('required')">Frequency Number is required</mat-error>
@@ -37,10 +51,11 @@
     </form>
     <div class="scrollable-content">
         <h3>Transactions</h3>
-        <p *ngFor="let tran of budget.transactions"> {{ tran.name }} {{ tran.amount | currency:'USD':'symbol':'1.2-2' }} {{tran.recurring }} {{ tran.frequencyType }} {{ tran.frequencyNumber }}</p>
+        <p *ngFor="let tran of budget.transactions; trackBy: trackByFn"> {{ tran.name }} {{ tran.amount | currency:'USD':'symbol':'1.2-2' }} {{tran.recurring }} {{ tran.frequencyType }} {{ tran.frequencyNumber }}</p>
     </div>
 </mat-dialog-content>
 <mat-dialog-actions>
     <button mat-button (click)="cancel()">Cancel</button>
     <button mat-button (click)="save()">Save</button>
+    <button mat-icon-button (click)="save()"><mat-icon>save</mat-icon></button>
   </mat-dialog-actions>
