--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,6 +1,3 @@
-mat-card {
-    max-width: 25%;
-}
 .main {
     display: flex;
     align-items: center; /* Vertical align the elements to the center */
@@ -24,24 +21,24 @@ mat-card {
   
   .card {
     width: 100%; /* Default to full width on small screens */
-    max-width: 300px; /* Set a maximum width for the card */
+    padding-left: 5px;
   }
   
   @media (min-width: 600px) {
     .card {
-      width: calc(50% - 8px); /* 2 cards per row on medium screens */
+      width: calc(100% - 8px); /* 1 card per row on medium screens */
     }
   }
   
   @media (min-width: 960px) {
     .card {
-      width: calc(33.33% - 10px); /* 3 cards per row on larger screens */
+      width: calc(75% - 8px); /* 2 cards per row on larger screens */
     }
   }
   
   @media (min-width: 1200px) {
     .card {
-      width: calc(25% - 12px); /* 4 cards per row on very large screens */
+      width: calc(50% - 10px); /* 3 cards per row on very large screens */
     }
   }
   .mat-mdc-card {
