--- a/src/app/components/manage-budget-dialog/manage-budget-dialog.component.css
+++ b/src/app/components/manage-budget-dialog/manage-budget-dialog.component.css
@@ -26,3 +26,13 @@
   button:disabled {
     background-color: #e0e0e0;
   }
+  
+  mat-dialog-actions {
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 16px; /* Optional to give space from the content */
+  }
+  
+  mat-dialog-actions button {
+    margin-left: 8px; /* Optional to space out buttons */
+  }
