--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,21 +1,39 @@
 <header class="header">
     <div class="header-title">My Budgets</div>
-    <button mat-icon-button class="menu-button" (click)="createBudget()">
-        <mat-icon>add</mat-icon>
+    <button mat-button class="menu-button" (click)="createBudget()">
+        Add <mat-icon>add</mat-icon>
+    </button>
+</header>
+<hr/>
+<header class="header">
+    <mat-form-field>
+        <input 
+            matInput 
+            [matDatepicker]="transactionDatePicker" 
+            [formControl]="transactionDatePickerControl" 
+            [min]="transactionDate" 
+            readonly
+            (dateChange)="onTransactionDateChange($event)">
+        <mat-datepicker #transactionDatePicker></mat-datepicker>
+        <mat-datepicker-toggle matIconSuffix [for]="transactionDatePicker"></mat-datepicker-toggle>
+    </mat-form-field>
+    <button mat-stroked-button color="primary" (click)="resetBudgets()" *ngIf="transactionDateHasChanged" style="margin-left: 5px;">
+        Reset
     </button>
 </header>
 <div class="card-grid">
     <mat-card *ngFor="let budget of budgets; let i = index" class="card">
         <div class="main">
             <h4>{{ budget.name }}</h4>
-            &nbsp; - &nbsp;&nbsp;
+            &nbsp; - &nbsp;
             <p><i>{{ budget.description }}</i></p>
-            <button mat-icon-button [matMenuTriggerFor]="menu">
+            <button mat-icon-button [matMenuTriggerFor]="menu" class="menu-button">
                 <mat-icon>more_vert</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
                 <button mat-menu-item (click)="editBudget(budget)">Edit</button>
                 <button mat-menu-item (click)="manageTransactions(budget)">Manage Transactions</button>
+                <button mat-menu-item (click)="duplicateBudget(budget)">Duplicate</button>
                 <button mat-menu-item style="color:red" (click)="deleteBudget(budget)">Delete</button>
               </mat-menu>
         </div>
