--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar color="primary">
+  <img src="logoalt.png" alt="BudgetBalance Logo" height="60">
     <span>Budget Balance</span>
     <span class="example-spacer"></span>
     <button mat-icon-button color="warn" *ngIf="authService.isLoggedIn" (click)="signOut()">
