--- a/src/app/components/manage-transactions-dialog/manage-transactions-dialog.component.html
+++ b/src/app/components/manage-transactions-dialog/manage-transactions-dialog.component.html
@@ -56,7 +56,7 @@
             color="primary" 
             type="submit" 
             [disabled]="transactionForm.invalid">
-            Add
+            {{ editId ? 'Save' : 'Add' }}
         </button>
     </form>
     <div class="scrollable-content">
@@ -64,6 +64,9 @@
         <div *ngFor="let tran of budget.transactions; trackBy: trackByFn"> 
             <span>
                 <strong>{{ tran.name }}</strong> {{ tran.amount | currency:'USD':'symbol':'1.2-2' }} {{ tran | recurringText }}
+                <button mat-icon-button color="primary" (click)="editTransaction(tran)">
+                    <mat-icon>edit</mat-icon>
+                </button>
                 <button mat-icon-button color="warn" (click)="removeTransaction(tran)">
                     <mat-icon>delete</mat-icon>
                 </button>
